entrega sprint 3